Java 11 migration